--- a/src/app/cliente/crear-cliente/crear-cliente.component.html
+++ b/src/app/cliente/crear-cliente/crear-cliente.component.html
@@ -33,7 +33,7 @@
                     <div class="form-floating">
                         <input type="text" [(ngModel)]="usuario.nombre" placeholder="" class="form-control"
                             oninput="this.value = this.value.toUpperCase()" id="floatingNombre">
-                        <label for="floatingNombre" class="color-label">Nombre</label>
+                        <label for="floatingNombre" class="color-label font-bold">Nombre</label>
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@
                     <div class="form-floating">
                         <input type="text" [(ngModel)]="usuario.identificacion" placeholder="" class="form-control"
                             id="floatingIdentificacion">
-                        <label for="floatingIdentificacion" class="color-label">Identificacion</label>
+                        <label for="floatingIdentificacion" class="color-label font-bold">Identificacion</label>
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="usuario.talla" placeholder="" class="form-control"
                             id="floatingEstatura">
-                        <label for="floatingEstatura" class="color-label">Estatura</label>
+                        <label for="floatingEstatura" class="color-label font-bold">Estatura</label>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="usuario.edad" placeholder="" class="form-control"
                             id="floatingEdad">
-                        <label for="floatingEdad" class="color-label">Edad</label>
+                        <label for="floatingEdad" class="color-label font-bold">Edad</label>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="peso" placeholder="" class="form-control" id="floatingPeso">
-                        <label for="floatingPeso" class="color-label">Peso</label>
+                        <label for="floatingPeso" class="color-label font-bold">Peso</label>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="text" [(ngModel)]="observacion" placeholder="" class="form-control" oninput="this.value = this.value.toUpperCase()" id="floatingObservacion">
-                        <label for="floatingObservacion" class="color-label">Observacion</label>
+                        <label for="floatingObservacion" class="color-label font-bold">Observacion</label>
                     </div>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="text" [(ngModel)]="objetivo" placeholder="" class="form-control" oninput="this.value = this.value.toUpperCase()" id="floatingObjetivo">
-                        <label for="floatingObjetivo" class="color-label">Objetivo</label>
+                        <label for="floatingObjetivo" class="color-label font-bold">Objetivo</label>
                     </div>
                 </div>
             </div>
