--- a/src/app/plan/crear-plantilla-plan/crear-plantilla-plan.component.html
+++ b/src/app/plan/crear-plantilla-plan/crear-plantilla-plan.component.html
@@ -32,7 +32,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="text" [(ngModel)]="plantillaPlan.nombre" oninput="this.value = this.value.toUpperCase()" placeholder="" class="form-control" id="floatingNombre">
-                        <label for="floatingNombre" class="color-label">Nombre Plantilla</label>
+                        <label for="floatingNombre" class="color-label font-bold">Nombre Plantilla</label>
                     </div>
                 </div>
             </div>
@@ -40,14 +40,14 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="text" [(ngModel)]="plantillaPlan.somatotipo" oninput="this.value = this.value.toUpperCase()" placeholder="" class="form-control" id="floatingSomatotipo">
-                        <label for="floatingSomatotipo" class="color-label">Somatotipo</label>
+                        <label for="floatingSomatotipo" class="color-label font-bold">Somatotipo</label>
                     </div>
                 </div>
             </div>
             <br>
             <div class="row mb-3">
                 <div class="d-grid gap-1">
-                    <button (click)="crearPlantillaPlan()" class="btn btn-primary color-button">Crear dia de Entrenamiento</button>
+                    <button (click)="crearPlantillaPlan()" class="btn btn-primary color-button">Crear día de Entrenamiento</button>
                 </div>
             </div>
             <ng-container *ngIf="plantillaPlan.plan.dias.length==0">
@@ -162,7 +162,7 @@
                         {{tipoMusculo.descripcion}}
                     </option>
                 </select>
-                <label for="floatingTipoMusculo" class="color-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Zona Muscular</label>
+                <label for="floatingTipoMusculo" class="color-label font-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Zona Muscular</label>
             </div>
         </div>
         <div class="row mb-3">
@@ -173,7 +173,7 @@
                         {{ejercicio.descripcion}}
                     </option>
                 </select>
-                <label for="floatingEjercicio" class="color-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ejercicio</label>
+                <label for="floatingEjercicio" class="color-label font-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ejercicio</label>
             </div>
         </div>
         <ng-container *ngIf="campoDetalle">
@@ -181,7 +181,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <textarea rows="3" [(ngModel)]="rutinaCrear.ejercicio.detalle" placeholder="" class="form-control" [disabled]="true" id="floatingDetalle"></textarea>
-                        <label for="floatingDetalle" class="color-label">Detalle</label>
+                        <label for="floatingDetalle" class="color-label font-bold">Detalle</label>
                     </div>
                 </div>
             </div>
@@ -191,7 +191,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaCrear.repeticiones" placeholder="" class="form-control" oninput="this.value = this.value.toUpperCase()" id="floatingRepeticiones">
-                        <label for="floatingRepeticiones" class="color-label">Repeticiones</label>
+                        <label for="floatingRepeticiones" class="color-label font-bold">Repeticiones</label>
                     </div>
                 </div>
             </div>
@@ -201,7 +201,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaCrear.series" placeholder="" class="form-control" oninput="this.value = this.value.toUpperCase()" id="floatingSeries">
-                        <label for="floatingSeries" class="color-label">Series</label>
+                        <label for="floatingSeries" class="color-label font-bold">Series</label>
                     </div>
                 </div>
             </div>
@@ -211,7 +211,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaCrear.valorPeso" placeholder="" class="form-control" oninput="this.value = this.value.toUpperCase()" id="floatingValorPeso">
-                        <label for="floatingValorPeso" class="color-label">Valor Peso</label>
+                        <label for="floatingValorPeso" class="color-label font-bold">Valor Peso</label>
                     </div>
                 </div>
             </div>
@@ -225,7 +225,7 @@
                             {{medidaPeso.valor}}
                         </option>
                     </select>
-                    <label for="floatingMedidaPeso" class="color-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Medida Peso</label>
+                    <label for="floatingMedidaPeso" class="color-label font-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Medida Peso</label>
                 </div>
             </div>
         </ng-container>
@@ -234,7 +234,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaCrear.valorTiempo" placeholder="" class="form-control" oninput="this.value = this.value.toUpperCase()" id="floatingTiempo">
-                        <label for="floatingTiempo" class="color-label">Tiempo</label>
+                        <label for="floatingTiempo" class="color-label font-bold">Tiempo</label>
                     </div>
                 </div>
             </div>
@@ -273,7 +273,7 @@
                         {{tipoMusculo.descripcion}}
                     </option>
                 </select>
-                <label for="floatingTipoMusculo" class="color-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Zona Muscular</label>
+                <label for="floatingTipoMusculo" class="color-label font-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Zona Muscular</label>
             </div>
         </div>
         <div class="row mb-3">
@@ -284,7 +284,7 @@
                         {{ejercicio.descripcion}}
                     </option>
                 </select>
-                <label for="floatingEjercicio" class="color-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ejercicio</label>
+                <label for="floatingEjercicio" class="color-label font-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ejercicio</label>
             </div>
         </div>
         <ng-container *ngIf="campoDetalle">
@@ -292,7 +292,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <textarea rows="3" [(ngModel)]="rutinaActualizar.ejercicio.detalle" placeholder="" class="form-control" [disabled]="true" id="floatingDetalle"></textarea>
-                        <label for="floatingDetalle" class="color-label">Detalle</label>
+                        <label for="floatingDetalle" class="color-label font-bold">Detalle</label>
                     </div>
                 </div>
             </div>
@@ -302,7 +302,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaActualizar.repeticiones" placeholder="" class="form-control" oninput="this.value = this.value.toUpperCase()" id="floatingRepeticiones">
-                        <label for="floatingRepeticiones" class="color-label">Repeticiones</label>
+                        <label for="floatingRepeticiones" class="color-label font-bold">Repeticiones</label>
                     </div>
                 </div>
             </div>
@@ -312,7 +312,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaActualizar.series" placeholder="" class="form-control" oninput="this.value = this.value.toUpperCase()" id="floatingSeries">
-                        <label for="floatingSeries" class="color-label">Series</label>
+                        <label for="floatingSeries" class="color-label font-bold">Series</label>
                     </div>
                 </div>
             </div>
@@ -322,7 +322,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaActualizar.valorPeso" placeholder="" class="form-control" oninput="this.value = this.value.toUpperCase()" id="floatingValorPeso">
-                        <label for="floatingValorPeso" class="color-label">Peso</label>
+                        <label for="floatingValorPeso" class="color-label font-bold">Peso</label>
                     </div>
                 </div>
             </div>
@@ -336,7 +336,7 @@
                             {{medidaPeso.valor}}
                         </option>
                     </select>
-                    <label for="floatingMedidaPeso" class="color-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Medida del Peso</label>
+                    <label for="floatingMedidaPeso" class="color-label font-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Medida del Peso</label>
                 </div>
             </div>
         </ng-container>
@@ -345,7 +345,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="number" [(ngModel)]="rutinaActualizar.valorTiempo" placeholder="" class="form-control" oninput="this.value = this.value.toUpperCase()" id="floatingTiempo">
-                        <label for="floatingTiempo" class="color-label">Tiempo</label>
+                        <label for="floatingTiempo" class="color-label font-bold">Tiempo</label>
                     </div>
                 </div>
             </div>
@@ -359,7 +359,7 @@
                             {{medidaTiempo.valor}}
                         </option>
                     </select>
-                    <label for="floatingMedidaTiempo" class="color-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tiempo</label>
+                    <label for="floatingMedidaTiempo" class="color-label font-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tiempo</label>
                 </div>
             </div>
         </ng-container>
