--- a/src/app/cliente/leer-cliente/leer-cliente.component.css
+++ b/src/app/cliente/leer-cliente/leer-cliente.component.css
@@ -14,6 +14,9 @@
 .color-label{
   color: #2b4a99;
 }
+.font-bold {
+  font-weight: bold;
+}
 .color-button-search{
   background-color: #496bb7;
 }
