--- a/src/app/plan/leer-plantilla-plan/leer-plantilla-plan.component.html
+++ b/src/app/plan/leer-plantilla-plan/leer-plantilla-plan.component.html
@@ -32,7 +32,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="text" [(ngModel)]="nombre" placeholder="" class="form-control" id="floatingNombre">
-                        <label for="floatingNombre" class="color-label">Nombre</label>
+                        <label for="floatingNombre" class="color-label font-bold">Nombre</label>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 <div class="col-12">
                     <div class="form-floating">
                         <input type="text" [(ngModel)]="somatotipo" placeholder="" class="form-control" id="floatingNombre">
-                        <label for="floatingNombre" class="color-label">Somatotipo</label>
+                        <label for="floatingNombre" class="color-label font-bold">Somatotipo</label>
                     </div>
                 </div>
             </div>
